--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <script src="bower_components/moment/min/moment.min.js"></script>
+  <!-- <script src="bower_components/moment/min/moment.min.js"></script> -->
   <link rel="stylesheet" href="build/css/vendor.css">
   <script src="build/js/vendor.min.js"></script>
   <script type="text/javascript" src="build/js/app.js"></script>
@@ -17,7 +17,43 @@
     <div class="jumbotron">
       <h1>Super Galactic Age Calculator</h1>
     </div>
-    <h3 id="time"></h3>
+    <h3>Today's Date: <span id="time"></span></h3>
+
+    <h2>Enter your date of birth</h2>
+    <form id="user-form" class="form-group">
+      <label for="birthdate">Birthdate: </label>
+      <input type="date" id="birthdate" required>
+      <br>
+      <h2>Select your gender</h2>
+      <label>
+        <input type="radio" name="gender" value="female" checked>
+        Female
+      </label>
+      <label>
+        <input type="radio" name="gender" value="male">
+        Male
+      </label>
+      <br>
+      <button type="submit" class="btn btn-success">Submit</button>
+    </form>
+
+    <!-- <h2>Select your gender</h2>
+    <div class="radio">
+      <label>
+        <input type="radio" name="gender" value="female" checked>
+        Female
+      </label>
+    </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="gender" value="male">
+        Male
+      </label>
+    </div> -->
+
+    <div id="output">
+
+    </div>
 
   </div>
 </body>
