implemented all functionality and displays information properly on index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <!-- <script src="bower_components/moment/min/moment.min.js"></script> -->
+  <script src="bower_components/moment/min/moment.min.js"></script>
   <link rel="stylesheet" href="build/css/vendor.css">
   <script src="build/js/vendor.min.js"></script>
   <script type="text/javascript" src="build/js/app.js"></script>
@@ -19,23 +19,49 @@
     </div>
     <h3>Today's Date: <span id="time"></span></h3>
 
-    <h2>Enter your date of birth</h2>
-    <form id="user-form" class="form-group">
-      <label for="birthdate">Birthdate: </label>
-      <input type="date" id="birthdate" required>
-      <br>
-      <h2>Select your gender</h2>
-      <label>
-        <input type="radio" name="gender" value="female" checked>
-        Female
-      </label>
-      <label>
-        <input type="radio" name="gender" value="male">
-        Male
-      </label>
-      <br>
-      <button type="submit" class="btn btn-success">Submit</button>
-    </form>
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Enter your date of birth</h2>
+        <form id="user-form" class="form-group">
+          <label for="birthdate">Birthdate: </label>
+          <input type="date" id="birthdate" required>
+          <br>
+          <h2>Select your gender</h2>
+          <label>
+            <input type="radio" name="gender" value="female" checked>
+            Female
+          </label>
+          <label>
+            <input type="radio" name="gender" value="male">
+            Male
+          </label>
+          <br>
+          <button type="submit" class="btn btn-success">Submit</button>
+        </form>
+
+        <div id="results">
+
+        </div>
+
+      </div>
+
+      <div class="col-md-6">
+        <h2>Calculate the seconds between two dates</h2>
+        <form id="date-form" class="form-group">
+          <label for="start-date">Start date: </label>
+          <input type="date" id="start-date" required>
+          <label for="end-date">End date: </label>
+          <input type="date" id="end-date" required>
+          <button class="submit" class="btn btn-default">Get seconds</button>
+        </form>
+      </div>
+
+      <div id="seconds-results">
+        
+      </div>
+
+    </div>
+
 
     <!-- <h2>Select your gender</h2>
     <div class="radio">
@@ -51,9 +77,7 @@
       </label>
     </div> -->
 
-    <div id="output">
 
-    </div>
 
   </div>
 </body>
