--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,72 +11,84 @@
 </head>
 <body>
   <div class="container">
-
-    <div class="jumbotron">
-      <h1>Super Galactic Age Calculator</h1>
-    </div>
-    <h3>Today's Date: <span id="time"></span></h3>
+    <h1>Super Galactic Age Calculator</h1>
+    <h3 class="todays-date">Today's Date: <span id="time"></span></h3>
 
     <div class="row">
       <div class="col-md-6">
-        <h2>Enter your date of birth</h2>
-        <form id="user-form" class="form-group">
-          <label for="birthdate">Birthdate: </label>
-          <input type="date" id="birthdate" required>
-          <br>
-          <h2>Select your gender</h2>
-          <label>
-            <input type="radio" name="gender" value="female" checked>
-            Female
-          </label>
-          <label>
-            <input type="radio" name="gender" value="male">
-            Male
-          </label>
-          <br>
-          <button type="submit" class="btn btn-success">Submit</button>
-        </form>
+        <div class="well">
+          <h2>Enter your date of birth</h2>
+          <form id="user-form" class="form-group">
+            <label for="birthdate">Birthdate: </label>
+            <input type="date" id="birthdate" required>
+            <br>
+            <h2>Select your gender</h2>
+            <label>
+              <input type="radio" name="gender" value="female" checked>
+              Female
+            </label>
+            <label>
+              <input type="radio" name="gender" value="male">
+              Male
+            </label>
+            <br>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+        </div>
 
-        <div id="results">
+        <div class="results">
+          <div class="well">
+            <div class="results-earth">
+              <h3>Earth</h3>
+              <ul id="results-earth">
+              </ul>
+            </div>
 
+            <div class="results-mercury">
+              <h3>Mercury</h3>
+              <ul id="results-mercury">
+              </ul>
+            </div>
+
+            <div class="results-venus">
+              <h3>Venus</h3>
+              <ul id="results-venus">
+              </ul>
+            </div>
+
+            <div class="results-mars">
+              <h3>Mars</h3>
+              <ul id="results-mars">
+              </ul>
+            </div>
+
+            <div class="results-jupiter">
+              <h3>Jupiter</h3>
+              <ul id="results-jupiter">
+              </ul>
+            </div>
+          </div>
         </div>
 
       </div>
 
       <div class="col-md-6">
-        <h2>Calculate the seconds between two dates</h2>
-        <form id="date-form" class="form-group">
-          <label for="start-date">Start date: </label>
-          <input type="date" id="start-date" required>
-          <label for="end-date">End date: </label>
-          <input type="date" id="end-date" required>
-          <button class="submit" class="btn btn-default">Get seconds</button>
-        </form>
+        <div class="well">
+          <h2>Calculate seconds between two dates</h2>
+          <form id="date-form" class="form-group">
+            <label for="start-date">Start date: </label>
+            <input type="date" id="start-date" required>
+            <label for="end-date">End date: </label>
+            <input type="date" id="end-date" required>
+            <button type="submit" class="btn btn-default">Get seconds</button>
+          </form>
+        </div>
+        <div class="well seconds">
+          <div id="seconds-results">
+          </div>
+        </div>
       </div>
-
-      <div id="seconds-results">
-        
-      </div>
-
     </div>
-
-
-    <!-- <h2>Select your gender</h2>
-    <div class="radio">
-      <label>
-        <input type="radio" name="gender" value="female" checked>
-        Female
-      </label>
-    </div>
-    <div class="radio">
-      <label>
-        <input type="radio" name="gender" value="male">
-        Male
-      </label>
-    </div> -->
-
-
-
   </div>
 </body>
 </html>
